--- a/job/templates/jobs/home.html
+++ b/job/templates/jobs/home.html
@@ -7,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="shorcut icon" href="{%  static 'favicon.ico' %}">
     <title>pvs</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!-- Custom styles for this template -->
-    <link href="album.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -44,7 +43,7 @@
                 </p>
                 <img src="{% static 'pvs.jpg' %}" style="border-radius: 50%; width: 200px; height: 200px;" align="left">
             </div>
-        </section>e
+        </section>
         <div class="album py-5 bg-light">
             <div class="container">
                 <div class="row">
